--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="header">
         <div class="header__wrapper">
-            <div class="header__wrapper-item"><a class = "text link" href="#about">О нас</a></div>
+            <div class="header__wrapper-item"><a class = "text link" href="#about">О проекте</a></div>
             <div class="header__wrapper-item"><a class = "text link" href="#modules">Модули</a></div>
             <div class="header__wrapper-item"><a class = "text link" href="#starting">Начало</a></div>
             <div class="header__wrapper-item"><a class = "text link" href="#contact">Контакт</a></div>
@@ -44,8 +44,8 @@
                 Данные темы сильно не взаимосвязаны, однако рекомендуется начать с информационной безопасности, а уже потом перейти в раздел о кибер-безопасности.
             </div>
             <div class="starting__buttons">
-                <div class="starting__buttons-item text"><a href="#">Информационная безопасность</a></div>
-                <div class="starting__buttons-item text"><a href="#">Кибер-безопасность</a></div>
+                <div class="starting__buttons-item text"><a href="#starting">Информационная безопасность</a></div>
+                <div class="starting__buttons-item text"><a href="#starting">Кибер-безопасность</a></div>
             </div>
         </div>
     </section>
