--- a/index.html
+++ b/index.html
@@ -41,11 +41,13 @@
     <section class="starting section__animation" id="starting">
         <div class="wrapper">
             <div class="starting__description text">
-                Погрузиться в эти темы можно прямо сейчас. Выбери предпочитаемую тему, с которого ты бы хотел начать. 
-                Данные темы сильно не взаимосвязаны, однако рекомендуется начать с информационной безопасности, а уже потом перейти в раздел о кибер-безопасности.
+                Погрузиться в эти темы можно прямо сейчас. Выбери предпочитаемую тему, с которого вы бы хотели начать. 
+                Данные темы сильно не взаимосвязаны, однако рекомендуется начать с общей безопасности, а уже потом перейти в раздел о кибер-безопасности.
+                <br><br>
+                (Раздел кибер-безопасности ещё не доступен)
             </div>
             <div class="starting__buttons">
-                <div class="starting__buttons-item text"><a href="#starting">Информационная безопасность</a></div>
+                <div class="starting__buttons-item text"><a href="general_security/index.html">Общая безопасность</a></div>
                 <div class="starting__buttons-item text"><a href="#starting">Кибер-безопасность</a></div>
             </div>
         </div>
