--- a/general_security/index.html
+++ b/general_security/index.html
@@ -27,6 +27,7 @@
                 <div class="modules__blocks-block">
                     <div class="modules__blocks-block-item text"><a href="modules/account_protection/index.html" class="link">3. Защита аккаунтов и личных данных.</a></div>
                     <div class="modules__blocks-block-item text"><a href="modules/internet_fraud/index.html" class="link">4. Мошенничества в Интернете.</a></div>
+                    <div class="modules__blocks-block-item text"><a href="modules/viruses_and_antiviruses/index.html" class="link">5. Вирусы и антивирусы: их распространение и защита от них.</a></div>
                 </div>
             </div>
         </div>
